--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
             <div class="row">
                 <div class="col align-self-center">
                     <h1 class="mb-4">
-                        The Desaign Thinking about Super Power
+                        Gapai masa depanmu bersama kami...
                     </h1>
                     <p class="mb-4">
-                        Dalam membuat sebuah desain website kita butuh menghadirkan hati dan pikiran yang harmonis
+                        Ikuti program online kami keberhasilan menunggu anda...
                     </p>
                     <a class="btn btn-primary mb-2" href="#" role="button">Get Started</a>
 
